feat: Add historical Jesus section and importmap updates
Introduces a new section on the historical Jesus, addressing common misconceptions about his existence and pagan parallels. Updates the `index.html` import map and `package.json` to include `react-dom` explicitly, ensuring correct dependency management for React 19.

--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
           scrollbar-width: none;
       }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "@google/genai": "https://esm.sh/@google/genai@^1.39.0",
     "react": "https://esm.sh/react@^19.2.4",
+    "react-dom": "https://esm.sh/react-dom@^19.2.4",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.4/client",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "recharts": "https://esm.sh/recharts@^3.7.0",
     "react/": "https://esm.sh/react@^19.2.4/",
@@ -60,8 +62,9 @@
   }
 }
 </script>
-</head>
+  </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
